Changed header to use viewport settings, fixed distortion on smaller devices, removed depreciated ttf file

--- a/css/header-styles.css
+++ b/css/header-styles.css
@@ -8,11 +8,13 @@ header {
     text-align: center;
     background: url(../images/cafe.png) center;
     font-family: 'Reenie Beanie', cursive;
+    max-height:50vh;
+    width:auto;
 }
 
     header h1 {
         padding: 0.2em 0.2em;
-        font-size: 80px;
+        font-size: 8vh;
         margin-top: 2em;
         background-color: rgba(0,0,0,0.4);
 
@@ -40,8 +42,8 @@ nav div {
 /* change the link color */
 .navbar-custom .navbar-nav .nav-link {
     color: #ffffff;
-    padding: 25px;
-    min-width: 8em;
+    padding: 15px;
+    min-width: 3em;
     transition: all ease 1s;
     font-size: 30px;
 }
